--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -5,3 +5,29 @@
 .card {
     margin-bottom: 1rem ;
 }
+
+.containerDetail {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 2px solid #8622e4;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 20px;
+    height: 200px;
+}
+
+.containerCart {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 2px solid #8622e4;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 15px;
+}
+
+.containerCart img {
+    width: 70px;
+    border-radius: 5px;
+}
