--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,9 +1,11 @@
 .card-body {
     margin: 1rem auto;
     margin-bottom: 1rem;
+
 }
 .card {
     margin-bottom: 1rem ;
+    height: 100rem;
 }
 
 .containerDetail {
@@ -30,4 +32,14 @@
 .containerCart img {
     width: 70px;
     border-radius: 5px;
+}
+
+
+
+.card-body {
+    gap: 4rem;
+}
+
+.justify-center {
+    align-items: center;
 }
